# digital-fatigue-detector

./: .gitignore  LICENSE  README.md  features ai_analysis.md  main.py  prd.md  pyproject.toml  requirements.txt  tasks.md  tech-stack.md  user-flow.md
flowguard/: README.md  main.py
flowguard/src/engine/: __init__.py  tracker.py
flowguard/src/shared/: __init__.py  models.py
flowguard/src/storage/: __init__.py  session_store.py
flowguard/src/web_app/: __init__.py  app.py
flowguard/src/web_app/static/: app.js  styles.css
flowguard/src/web_app/templates/: index.html
src/desktop_app/: main.py
src/engine/: __init__.py  tracker.py
src/shared/: __init__.py  models.py
src/web_app/: __init__.py  app.py
tests/: test_tracker.py
