[project]
name = "flowguard-ai"
version = "0.1.0"
description = "Local fatigue tracking prototype for FlowGuard AI."
requires-python = ">=3.11,<3.14"
dependencies = [
    "pynput",
    "python-dotenv",
    "scikit-learn",
    "flask==3.1.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

